# RUTINATOR-MVP

./: .gitignore  DOCS.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
data/: ejercicios.csv
src/: __init__.py  bot_telegram.py  logic_processor.py  main.py
src/application/: __init__.py  nutrition_service.py  periodization_service.py  training_generator_service.py
src/domain/: __init__.py  models.py  rules.py
src/infrastructure/: __init__.py  async_bridge.py  config.py  logging.py
src/infrastructure/generators/: __init__.py  base.py  pdf_nutricion.py  pdf_rutina.py  pdf_semanal.py
src/infrastructure/repositories/: __init__.py  exercise_repository.py
src/interfaces/: __init__.py  services.py
tests/: __init__.py  test_models.py  test_rules.py  test_services.py
